chore: fix M_NavBar z-index

--- a/src/components/molecules/M_NavBar/M_NavBar.module.scss
+++ b/src/components/molecules/M_NavBar/M_NavBar.module.scss
@@ -7,7 +7,7 @@
   width: 100%;
   height: calc(#{$space} * 7);
   background: var(--nav-overlay);
-  z-index: 999;
+  z-index: 1000;
   display: flex;
   justify-content: center;
   overflow: hidden;
